<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff171c20"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/topbar_bg" >

        <ImageView
            android:id="@+id/actionbar_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_launch" />

        <TextView
            android:id="@+id/actionbar_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
             android:layout_marginRight="80dp"
            android:layout_toRightOf="@id/actionbar_logo"
            android:text="@string/app_name"
            android:textColor="#ffffffff"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/inject_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/on_off_checkbox"
            android:button="@null"
            android:checked="true"
            android:clickable="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/header_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/header_progress"
            style="@style/Widget.Sherlock.ProgressBar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="9.0dip"
            android:paddingBottom="8.0dip"
            android:paddingLeft="8.0dip"
            android:paddingRight="0dp"
            android:text="正在执行代码注入"
            android:textColor="#ffffff"
            android:textSize="15.0sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/inject_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/inject_address_tips"
                android:textColor="#FFFFCC"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inject_pattern"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_vertical|left"
                android:hint="*"
                android:padding="6dp"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="18dp"
                android:text="@string/inject_code_tips"
                android:textColor="#FFFFCC"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/inject_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_bg"
                android:gravity="top|left"
                android:hint="@string/default_inject"
                android:minLines="4"
                android:padding="6dp" />

            <Button
                android:id="@+id/inject_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="18.0dip"
                android:background="@drawable/button"
                android:gravity="center"
                android:padding="14.0dip"
                android:text="@string/save"
                android:textColor="#ffffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>